# SDiZO---Projekt---Remastered

E1/: CMakeLists.txt  main.cpp
E1/headers/: BSTTree.h  Menu.h  MyArray.h  MyHeap.h  MyList.h
